[ai] Modernize Java stuff